sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:9: error: ';' expected but 'else' found.
   else 
   ^